<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <!-- Campo de nuevo usuario -->
    <EditText
        android:id="@+id/etNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:layout_below="@id/tvRegisterTitle"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp" />

    <!-- Campo de nueva contraseña -->
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:layout_below="@id/etNewUsername"
        android:layout_marginBottom="24dp" />

    <!-- Botón de registro -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_below="@id/etNewPassword"
        android:layout_marginBottom="16dp" />

    <!-- Botón para cancelar y volver a login -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_below="@id/btnRegister" />

</RelativeLayout>
